--- a/api-doc/qml-qtejdb-qejdbclient.html
+++ b/api-doc/qml-qtejdb-qejdbclient.html
@@ -5,11 +5,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- qejdbclient.cpp -->
   <title>QEjdbClient QML Type | qtejdb </title>
-  <link rel="stylesheet" type="text/css" href="http://markusmarx.github.io/qtejdb/stylesheets/styles.css" />
-  <link rel="stylesheet" type="text/css" href="http://markusmarx.github.io/qtejdb/stylesheets/github-light.css" />
+  <link rel="stylesheet" type="text/css" href="../style/styles.css" />
+  <link rel="stylesheet" type="text/css" href="../style/github-light.css" />
 </head>
 <body>
-<div class="wrapper"> <header>     <h1>QtEjdb</h1>     <p>Qt/ Qml json database based on ejdb</p>     <p class="view">        <a href="qtejdb-database.html">QtEjdb Qt API</a> <br/>        <a href="qtejdb-qmlmodule.html">QtEjdb QtQuick API</a>     </p>     <p class="view"><a href="https://github.com/markusmarx/qtejdb">View the Project on GitHub <small>markusmarx/qtejdb</small></a></p>   </header>   <section><div class="sidebar">
+<div class="wrapper">   <section><div class="sidebar">
 <div class="toc">
 <h3><a name="toc">Contents</a></h3>
 <ul>
@@ -37,12 +37,12 @@
 <a name="methods"></a>
 <h2 id="methods">Methods</h2>
 <ul>
-<li class="fn">void <b><b><a href="qml-qtejdb-qejdbclient.html#createCollection-method">createCollection</a></b></b>(QString <i>collectionName</i>)</li>
-<li class="fn">QJSValue <b><b><a href="qml-qtejdb-qejdbclient.html#load-method">load</a></b></b>(QString <i>collectionName</i>, QJsValue <i>uid</i>)</li>
-<li class="fn">void <b><b><a href="qml-qtejdb-qejdbclient.html#query-method">query</a></b></b>(QString <i>collectionName</i>, QJsValue <i>query</i>, QJsValue <i>hints</i>)</li>
-<li class="fn">void <b><b><a href="qml-qtejdb-qejdbclient.html#remove-method">remove</a></b></b>(QString <i>collectionName</i>, QJsValue <i>id</i>)</li>
-<li class="fn">void <b><b><a href="qml-qtejdb-qejdbclient.html#removeCollection-method">removeCollection</a></b></b>(QString <i>collectionName</i>)</li>
-<li class="fn">QJsValue <b><b><a href="qml-qtejdb-qejdbclient.html#save-method">save</a></b></b>(QString <i>collectionName</i>, QJSValue <i>json</i>)</li>
+<li class="fn">void <b><b><a href="qml-qtejdb-qejdbclient.html#createCollection-method">createCollection</a></b></b>(QString <i> collectionName</i>)</li>
+<li class="fn">QJSValue <b><b><a href="qml-qtejdb-qejdbclient.html#load-method">load</a></b></b>(QString <i> collectionName</i>, QJsValue <i> uid</i>)</li>
+<li class="fn">void <b><b><a href="qml-qtejdb-qejdbclient.html#query-method">query</a></b></b>(QString <i> collectionName</i>, QJsValue <i> query</i>, QJsValue <i> hints</i>)</li>
+<li class="fn">void <b><b><a href="qml-qtejdb-qejdbclient.html#remove-method">remove</a></b></b>(QString <i> collectionName</i>, QJsValue <i> id</i>)</li>
+<li class="fn">void <b><b><a href="qml-qtejdb-qejdbclient.html#removeCollection-method">removeCollection</a></b></b>(QString <i> collectionName</i>)</li>
+<li class="fn">QJsValue <b><b><a href="qml-qtejdb-qejdbclient.html#save-method">save</a></b></b>(QString <i> collectionName</i>, QJSValue <i> json</i>)</li>
 </ul>
 <!-- $$$QEjdbClient-description -->
 <a name="details"></a>
