--- a/api-doc/qtejdb-qmlmodule.html
+++ b/api-doc/qtejdb-qmlmodule.html
@@ -5,11 +5,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- qtqquickplugin.qdoc -->
   <title>QtEjdb QML Framework | qtejdb </title>
-  <link rel="stylesheet" type="text/css" href="http://markusmarx.github.io/qtejdb/stylesheets/styles.css" />
-  <link rel="stylesheet" type="text/css" href="http://markusmarx.github.io/qtejdb/stylesheets/github-light.css" />
+  <link rel="stylesheet" type="text/css" href="../style/styles.css" />
+  <link rel="stylesheet" type="text/css" href="../style/github-light.css" />
 </head>
 <body>
-<div class="wrapper"> <header>     <h1>QtEjdb</h1>     <p>Qt/ Qml json database based on ejdb</p>     <p class="view">        <a href="qtejdb-database.html">QtEjdb Qt API</a> <br/>        <a href="qtejdb-qmlmodule.html">QtEjdb QtQuick API</a>     </p>     <p class="view"><a href="https://github.com/markusmarx/qtejdb">View the Project on GitHub <small>markusmarx/qtejdb</small></a></p>   </header>   <section><li>QtEjdb QML Framework</li>
+<div class="wrapper">   <section><li>QtEjdb QML Framework</li>
 <div class="sidebar"><div class="sidebar-content" id="sidebar-content"></div></div>
 <h1 class="title">QtEjdb QML Framework</h1>
 <span class="subtitle"></span>
