--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div id="page-content-wrapper">
             
                     <div class="col-lg-12">
-                        <iframe name="content" src="api-doc/qejdbdatabase.html" class="iframe" seamless="" frameborder="0" height="100%" width="100%">
+                        <iframe name="content" src="api-doc/qtejdb-module.html" class="iframe" seamless="" frameborder="0" height="100%" width="100%">
                         </iframe>
                     </div>
                 
